crates/ruff_linter/src/rules/flake8_slots/snapshots/ruff_linter__rules__flake8_slots__tests__SLOT000_SLOT000.py.snap
---
source: crates/ruff_linter/src/rules/flake8_slots/mod.rs
---
SLOT000 Subclasses of `str` should define `__slots__`
 --> SLOT000.py:1:7
  |
1 | class Bad(str):  # SLOT000
  |       ^^^
  |
