crates/ruff_linter/src/rules/flake8_slots/snapshots/ruff_linter__rules__flake8_slots__tests__SLOT001_SLOT001.py.snap
---
source: crates/ruff_linter/src/rules/flake8_slots/mod.rs
---
SLOT001 Subclasses of `tuple` should define `__slots__`
 --> SLOT001.py:1:7
  |
1 | class Bad(tuple):  # SLOT001
  |       ^^^
  |

SLOT001 Subclasses of `tuple` should define `__slots__`
  --> SLOT001.py:12:7
   |
12 | class Bad(Tuple):  # SLOT001
   |       ^^^
   |

SLOT001 Subclasses of `tuple` should define `__slots__`
  --> SLOT001.py:16:7
   |
16 | class Bad(Tuple[str, int, float]):  # SLOT001
   |       ^^^
   |

SLOT001 Subclasses of `tuple` should define `__slots__`
  --> SLOT001.py:26:7
   |
26 | class AlsoBad(builtins.tuple[int, int]):  # SLOT001
   |       ^^^^^^^
   |
